SERVER-8124: in fts, error out when creating indexes if score is too high